--- a/index.css
+++ b/index.css
@@ -2,10 +2,19 @@
     box-sizing: border-box;
     margin:0;
     padding: 0;
-    font-family: Montserrat,sans-serif;
+    font-family: Archivo,Montserrat,sans-serif;
 }
 main section{
     background-color: #000000;
+}
+footer{
+    background-color: #000000;
+
+}
+footer p{
+    color:#FFFFFF;
+    text-align: center;
+    font-size: 10px;
 }
 h2{
     margin-bottom: 24px;
@@ -190,7 +199,6 @@ a{
     }
     .logo{
         margin:20px;
-        margin-bottom: 70px;
     }
     h2{
         margin-bottom: 12px;
