--- a/index.css
+++ b/index.css
@@ -7,9 +7,14 @@
 main section{
     background-color: #000000;
 }
-footer{
-    background-color: #000000;
-
+footer{  
+        background-color: #000000; /* Cor de fundo do rodapé */
+        color: #FFFFFF; /* Cor do texto do rodapé */
+        padding: 20px; /* Espaçamento interno do rodapé */
+        position: fixed; /* Fixar o rodapé na parte inferior da tela */
+        bottom: 0; /* Alinhar o rodapé à parte inferior */
+        width: 100%; /* Largura total do rodapé */
+        text-align: center; /* Centralizar o texto */
 }
 footer p{
     color:#FFFFFF;
