--- a/index.css
+++ b/index.css
@@ -7,15 +7,20 @@
 main section{
     background-color: #000000;
 }
-footer{  
-        background-color: #000000; /* Cor de fundo do rodapé */
-        color: #FFFFFF; /* Cor do texto do rodapé */
-        padding: 20px; /* Espaçamento interno do rodapé */
-        position: fixed; /* Fixar o rodapé na parte inferior da tela */
-        bottom: 0; /* Alinhar o rodapé à parte inferior */
-        width: 100%; /* Largura total do rodapé */
-        text-align: center; /* Centralizar o texto */
+main {
+    margin-bottom: 60px; /* Adiciona margem inferior para deixar espaço para o rodapé */
 }
+
+footer {
+    background-color: #000000; /* Cor de fundo do rodapé */
+    color: #FFFFFF; /* Cor do texto do rodapé */
+    padding: 25px; /* Espaçamento interno do rodapé */
+    position: fixed; /* Fixar o rodapé na parte inferior da tela */
+    bottom: 0; /* Alinhar o rodapé à parte inferior */
+    width: 100%; /* Largura total do rodapé */
+    text-align: center; /* Centralizar o texto */
+}
+
 footer p{
     color:#FFFFFF;
     text-align: center;
@@ -173,6 +178,9 @@ a{
     h4{
         margin-bottom: 24px;
     }
+    footer{  
+        position: fixed; /* Fixar o rodapé na parte inferior da tela */
+}
 }
 @media (min-width: 880px) and (max-width: 1050px){
     .bot1, .bot2, .bot3 {
@@ -187,6 +195,9 @@ a{
         border-radius: 25px;
         padding: 10px 24px;
     }
+    footer{  
+        position: fixed; /* Fixar o rodapé na parte inferior da tela */
+}
 }
 
 @media (min-width: 450px) and (max-width: 879px){
@@ -212,6 +223,9 @@ a{
     h4{
         margin-bottom: 24px;
     }
+    footer{  
+        position: fixed; /* Fixar o rodapé na parte inferior da tela */
+}
 }
 @media (min-width: 320px) and (max-width: 449px){
     .bot1, .bot2, .bot3 {
@@ -231,4 +245,7 @@ a{
     margin-left: 2px;
     height: 30px; /* Defina uma altura fixa para a imagem */
     }
+    footer{  
+        position: fixed; /* Fixar o rodapé na parte inferior da tela */
+}
 }
